# GERA-Framework

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
benchmarks/: __init__.py  benchmark_reconciliation.py
examples/: basic_reconciliation.py  multi_source_reconciliation.py
gera/: __init__.py
gera/governance/: __init__.py  audit_logger.py  semantic_registry.py
gera/nist/: __init__.py  csf2_controls.py
gera/reconciliation/: __init__.py  deterministic_matcher.py  exception_router.py
gera/validation/: __init__.py  reasonableness.py  reconciliation_checks.py  zscore_gate.py
sql/athena/: 04_exceptions_queue.sql
sql/bigquery/: 04_exceptions_queue.sql
terraform/abac/: main.tf
terraform/audit_logging/: main.tf
terraform/bigquery_rls/: main.tf
tests/: test_integration.py  test_reconciliation.py  test_regressions.py  test_zscore_gate.py
